--- a/build.gradle
+++ b/build.gradle
@@ -25,6 +25,9 @@ loom {
 		"imagemod" {
 			sourceSet sourceSets.main
 			sourceSet sourceSets.client
+			dependencies {
+				modImplementation "net.fabricmc.fabric-api:fabric-command-api-v2:+"
+			}
 		}
 	}
 
