--- a/gradle.properties
+++ b/gradle.properties
@@ -4,14 +4,14 @@ org.gradle.parallel=true
 
 # Fabric Properties
 # check these on https://fabricmc.net/develop
-minecraft_version=1.21
-yarn_mappings=1.21+build.9
+minecraft_version=1.21.4
+yarn_mappings=1.21.4+build.2
 loader_version=0.16.9
 
+# Fabric API
+fabric_version=0.112.1+1.21.4
+
 # Mod Properties
-mod_version=1.0.0
+mod_version=1.7.0
 maven_group=com.kevsterking
 archives_base_name=imagemod
-
-# Dependencies
-fabric_version=0.102.0+1.21
