--- a/build.gradle
+++ b/build.gradle
@@ -34,6 +34,7 @@ loom {
 }
 
 dependencies {
+
 	// To change the versions see the gradle.properties file
 	minecraft "com.mojang:minecraft:${project.minecraft_version}"
 	mappings "net.fabricmc:yarn:${project.yarn_mappings}:v2"
@@ -41,7 +42,11 @@ dependencies {
 
 	// Fabric API. This is technically optional, but you probably want it anyway.
 	modImplementation "net.fabricmc.fabric-api:fabric-api:${project.fabric_version}"
-	
+
+	// Add dependency on your core module, implementation (internal use)
+	// api would expose to external use also
+	implementation project(':imagemod-core')
+
 }
 
 processResources {
