--- a/gradle.properties
+++ b/gradle.properties
@@ -1,17 +1,16 @@
 # Done to increase the memory available to gradle.
-org.gradle.jvmargs=-Xmx1G
+org.gradle.jvmargs=-Xmx4G
 org.gradle.parallel=true
 
-# Fabric Properties
-# check these on https://fabricmc.net/develop
-minecraft_version=1.21.4
-yarn_mappings=1.21.4+build.2
-loader_version=0.16.10
-
-# Fabric API
-fabric_version=0.112.1+1.21.4
-
-# Mod Properties
+# ImageMod
 mod_version=1.7.0
 maven_group=com.kevsterking
 archives_base_name=imagemod
+
+# Minecraft
+minecraft_version=1.21.4
+
+# Fabric, check these on https://fabricmc.net/develop
+yarn_mappings=1.21.4+build.2
+loader_version=0.16.10
+fabric_version=0.112.1+1.21.4
