Moved to separate packages, argument abstractions

--- a/gradle.properties
+++ b/gradle.properties
@@ -4,8 +4,12 @@ org.gradle.parallel=true
 
 # ImageMod
 mod_version=1.7.0
-maven_group=com.kevsterking
+mod_id=imagemod
+maven_group=com.kevsterking.imagemod.fabric
 archives_base_name=imagemod
+
+# Loom
+loom_version=1.9-SNAPSHOT
 
 # Minecraft
 minecraft_version=1.21.4
