NeoForge examplemod added and gradle.properties cleaner naming

--- a/gradle.properties
+++ b/gradle.properties
@@ -1,20 +1,32 @@
-# Done to increase the memory available to gradle.
+# Gradle
 org.gradle.jvmargs=-Xmx4G
 org.gradle.parallel=true
 
-# ImageMod
-mod_version=1.7.0
-mod_id=imagemod
-maven_group=com.kevsterking.imagemod.fabric
-archives_base_name=imagemod
+# Java
+java_version=21
 
-# Loom
-loom_version=1.9-SNAPSHOT
+# ImageMod
+mod_name=Image Mod
+mod_id=imagemod
+mod_version=1.7.0
+mod_group=com.kevsterking.imagemod
+mod_license=GNU GPLv3
+mod_authors=Kevsterking
+mod_description=A Mod For Creating Pixel-Art With Blocks In Minecraft
 
 # Minecraft
 minecraft_version=1.21.4
+minecraft_version_range=[1.21,)
 
 # Fabric, check these on https://fabricmc.net/develop
-yarn_mappings=1.21.4+build.2
-loader_version=0.16.10
-fabric_version=0.112.1+1.21.4
+fabric_api_version=0.112.1+1.21.4
+fabric_loader_version=0.16.10
+fabric_loom_version=1.9-SNAPSHOT
+fabric_yarn_mappings=1.21.4+build.2
+
+# NeoForge
+neo_version=21.1.93
+neo_version_range=[21.1.0,)
+neo_loader_version_range=[4,)
+neogradle.subsystems.parchment.minecraftVersion=1.21.1
+neogradle.subsystems.parchment.mappingsVersion=2024.11.17
