--- a/settings.gradle
+++ b/settings.gradle
@@ -4,6 +4,11 @@ pluginManagement {
 			name = 'Fabric'
 			url = 'https://maven.fabricmc.net/'
 		}
+		maven {
+			name = 'NeoForge'
+			url = 'https://maven.neoforged.net/releases'
+		}
+		mavenLocal()
 		mavenCentral()
 		gradlePluginPortal()
 	}
@@ -13,3 +18,4 @@ rootProject.name = "${mod_id}"
 
 include 'imagemod-core'
 include 'imagemod-fabric'
+include 'imagemod-neoforge'
