--- a/gradle.properties
+++ b/gradle.properties
@@ -12,21 +12,24 @@ mod_version=1.7.0
 mod_group=com.kevsterking.imagemod
 mod_license=GNU GPLv3
 mod_authors=Kevsterking
-mod_description=A Mod For Creating Pixel-Art With Blocks In Minecraft
-
-# Minecraft
-minecraft_version=1.21.4
-minecraft_version_range=[1.21,)
+mod_description=A Mod For Creating Pixel-Art In Minecraft With Blocks
+mod_git_repo=https://github.com/Kevsterking/ImageMod
 
 # Fabric, check these on https://fabricmc.net/develop
+fabric_minecraft_version=1.21.4
+fabric_minecraft_version_range=~1.21
 fabric_api_version=0.112.1+1.21.4
+fabric_api_version_range=*
 fabric_loader_version=0.16.10
+fabric_loader_version_range=>=0.16.0
 fabric_loom_version=1.9-SNAPSHOT
 fabric_yarn_mappings=1.21.4+build.2
 
 # NeoForge
-neo_version=21.1.93
-neo_version_range=[21.1.0,)
+neogradle.subsystems.parchment.minecraftVersion=1.21.4
+neogradle.subsystems.parchment.mappingsVersion=2025.01.05
+neo_minecraft_version=1.21.4
+neo_minecraft_version_range=[1.21,1.22)
+neo_version=21.4.52-beta
+neo_version_range=[21.4.0,)
 neo_loader_version_range=[4,)
-neogradle.subsystems.parchment.minecraftVersion=1.21.1
-neogradle.subsystems.parchment.mappingsVersion=2024.11.17
