--- a/imagemod-fabric/build.gradle
+++ b/imagemod-fabric/build.gradle
@@ -35,7 +35,7 @@ loom {
 dependencies {
 
 	// To change the versions see the gradle.properties file
-	minecraft "com.mojang:minecraft:${project.minecraft_version}"
+	minecraft "com.mojang:minecraft:${fabric_minecraft_version}"
 	mappings "net.fabricmc:yarn:${project.fabric_yarn_mappings}:v2"
 	modImplementation "net.fabricmc:fabric-loader:${project.fabric_loader_version}"
 
@@ -49,9 +49,22 @@ dependencies {
 }
 
 processResources {
-	inputs.property "version", project.version
+
 	filesMatching("fabric.mod.json") {
-		expand "version": project.version
+		expand(
+			"java_version": java_version,
+			"mod_name": mod_name,
+			"mod_id": mod_id,
+			"mod_version": mod_version,
+			"mod_group": mod_group,
+			"mod_license": mod_license,
+			"mod_authors": mod_authors,
+			"mod_description": mod_description,
+			"mod_git_repo": mod_git_repo,
+			"fabric_minecraft_version_range": fabric_minecraft_version_range,
+			"fabric_api_version_range": fabric_api_version_range,
+			"fabric_loader_version_range": fabric_loader_version_range,
+		)
 	}
 }
 
