--- a/imagemod-neoforge/build.gradle
+++ b/imagemod-neoforge/build.gradle
@@ -95,7 +95,7 @@ dependencies {
     // implementation files("libs/coolmod-${mc_version}-${coolmod_version}.jar")
 
     // Example project dependency using a sister or child project:
-    implementation project(":imagemod-core")
+    //implementation project(":imagemod-core")
 
     // For more info:
     // http://www.gradle.org/docs/current/userguide/artifact_dependencies_tutorial.html
