Compatibility update for Minecraft 1.21.5 - ImageMod-1.7.1

--- a/gradle.properties
+++ b/gradle.properties
@@ -8,7 +8,7 @@ java_version=21
 # ImageMod
 mod_name=Image Mod
 mod_id=imagemod
-mod_version=1.7.0
+mod_version=1.7.1
 mod_group=com.kevsterking.imagemod
 mod_license=GNU GPLv3
 mod_authors=Kevsterking
@@ -16,20 +16,20 @@ mod_description=A Mod For Creating Pixel-Art In Minecraft With Blocks
 mod_git_repo=https://github.com/Kevsterking/ImageMod
 
 # Fabric, check these on https://fabricmc.net/develop
-fabric_minecraft_version=1.21.4
-fabric_minecraft_version_range=>=1.21.2
-fabric_api_version=0.112.1+1.21.4
+fabric_minecraft_version=1.21.5
+fabric_minecraft_version_range=>=1.21.4
+fabric_api_version=0.120.0+1.21.5
 fabric_api_version_range=*
-fabric_loader_version=0.16.10
+fabric_loader_version=0.16.13
 fabric_loader_version_range=>=0.16.8
-fabric_loom_version=1.9-SNAPSHOT
-fabric_yarn_mappings=1.21.4+build.2
+fabric_loom_version=1.10-SNAPSHOT
+fabric_yarn_mappings=1.21.5+build.1
 
 # NeoForge
 neogradle.subsystems.parchment.minecraftVersion=1.21.4
-neogradle.subsystems.parchment.mappingsVersion=2025.01.05
-neo_minecraft_version=1.21.4
-neo_minecraft_version_range=[1.21,1.22)
-neo_version=21.4.52-beta
-neo_version_range=[21.0.0,)
+neogradle.subsystems.parchment.mappingsVersion=2025.03.23
+neo_minecraft_version=1.21.5
+neo_minecraft_version_range=[1.21.5,1.22]
+neo_version=21.5.40-beta
+neo_version_range=[21.5,)
 neo_loader_version_range=[4,)
