--- a/gradle.properties
+++ b/gradle.properties
@@ -1,6 +1,9 @@
 # Gradle
 org.gradle.jvmargs=-Xmx8G
 org.gradle.parallel=true
+org.gradle.daemon=true
+org.gradle.caching=true
+org.gradle.configuration-cache=true
 
 # Java
 java_version=21
@@ -8,7 +11,7 @@ java_version=21
 # ImageMod
 mod_name=Image Mod
 mod_id=imagemod
-mod_version=1.7.1
+mod_version=1.8.0
 mod_group=com.kevsterking.imagemod
 mod_license=GNU GPLv3
 mod_authors=Kevsterking
@@ -16,20 +19,20 @@ mod_description=A Mod For Creating Pixel-Art In Minecraft With Blocks
 mod_git_repo=https://github.com/Kevsterking/ImageMod
 
 # Fabric, check these on https://fabricmc.net/develop
-fabric_minecraft_version=1.21.5
+fabric_minecraft_version=1.21.10
 fabric_minecraft_version_range=>=1.21.4
-fabric_api_version=0.120.0+1.21.5
+fabric_api_version=0.138.3+1.21.10
 fabric_api_version_range=*
-fabric_loader_version=0.16.13
+fabric_loader_version=0.18.1
 fabric_loader_version_range=>=0.16.8
-fabric_loom_version=1.10-SNAPSHOT
-fabric_yarn_mappings=1.21.5+build.1
+fabric_loom_version=1.13-SNAPSHOT
+fabric_yarn_mappings=1.21.10+build.2
 
 # NeoForge
-neogradle.subsystems.parchment.minecraftVersion=1.21.4
-neogradle.subsystems.parchment.mappingsVersion=2025.03.23
-neo_minecraft_version=1.21.5
+parchment_minecraft_version=1.21.10
+parchment_mappings_version=2025.10.12
+neo_minecraft_version=1.21.10
 neo_minecraft_version_range=[1.21.5,1.22]
-neo_version=21.5.40-beta
+neo_version=21.10.55-beta
 neo_version_range=[21.5,)
 neo_loader_version_range=[4,)
