--- a/imagemod-fabric/build.gradle
+++ b/imagemod-fabric/build.gradle
@@ -1,5 +1,5 @@
 plugins {
-	id 'fabric-loom' version "1.10-SNAPSHOT"
+	id 'fabric-loom' version "${project.fabric_loom_version}"
 	id 'maven-publish'
 }
 
@@ -21,7 +21,7 @@ repositories {
 loom {
 	splitEnvironmentSourceSets()
 	mods {
-		"imagemod" {
+		"${project.mod_id}" {
 			sourceSet sourceSets.main
 			sourceSet sourceSets.client
 			dependencies {
@@ -33,23 +33,18 @@ loom {
 }
 
 dependencies {
-
 	// To change the versions see the gradle.properties file
 	minecraft "com.mojang:minecraft:${fabric_minecraft_version}"
-	mappings "net.fabricmc:yarn:${project.fabric_yarn_mappings}:v2"
+	mappings loom.officialMojangMappings()
 	modImplementation "net.fabricmc:fabric-loader:${project.fabric_loader_version}"
-
 	// Fabric API. This is technically optional, but you probably want it anyway.
 	modImplementation "net.fabricmc.fabric-api:fabric-api:${project.fabric_api_version}"
-
 	// Add dependency on your core module, implementation (internal use)
 	// api would expose to external use also
 	//include project(':imagemod-core')
-
 }
 
 processResources {
-
 	filesMatching("fabric.mod.json") {
 		expand(
 			"java_version": java_version,
@@ -69,7 +64,7 @@ processResources {
 }
 
 tasks.withType(JavaCompile).configureEach {
-	it.options.release = 21
+	it.options.release = java_version
 }
 
 java {
@@ -95,7 +90,6 @@ publishing {
 			from components.java
 		}
 	}
-
 	// See https://docs.gradle.org/current/userguide/publishing_maven.html for information on how to set up publishing.
 	repositories {
 		// Add repositories to publish to here.
