--- a/settings.gradle
+++ b/settings.gradle
@@ -4,14 +4,13 @@ pluginManagement {
 			name = 'Fabric'
 			url = 'https://maven.fabricmc.net/'
 		}
-		maven {
-			name = 'NeoForge'
-			url = 'https://maven.neoforged.net/releases'
-		}
-		mavenLocal()
 		mavenCentral()
 		gradlePluginPortal()
 	}
+}
+
+plugins {
+    id 'org.gradle.toolchains.foojay-resolver-convention' version '1.0.0'
 }
 
 rootProject.name = "${mod_id}"
