--- a/gradle.properties
+++ b/gradle.properties
@@ -8,6 +8,10 @@ org.gradle.configuration-cache=false
 # Java
 java_version=21
 
+core_minecraft_version=1.21.11
+core_loom_version=1.14-SNAPSHOT
+core_parchment_mappings_version=2024.11.10
+
 # ImageMod
 mod_name=Image Mod
 mod_id=imagemod
