platform independant command system interface

--- a/gradle.properties
+++ b/gradle.properties
@@ -8,10 +8,6 @@ org.gradle.configuration-cache=false
 # Java
 java_version=21
 
-core_minecraft_version=1.21.11
-core_loom_version=1.14-SNAPSHOT
-core_parchment_mappings_version=2024.11.10
-
 # ImageMod
 mod_name=Image Mod
 mod_id=imagemod
@@ -23,18 +19,22 @@ mod_issue_url=https://github.com/Kevsterking/ImageMod/issues
 mod_description=A Mod For Creating Pixel-Art In Minecraft With Blocks
 mod_git_repo=https://github.com/Kevsterking/ImageMod
 
+minecraft_version=1.21.11
+
+# Mappings
+parchment_mappings_version=2024.11.10
+parchment_minecraft_version=1.21
+loom_version=1.14-SNAPSHOT
+
 # Fabric - https://fabricmc.net/develop
 fabric_minecraft_version=1.21.11
 fabric_minecraft_version_range=>=1.21.4
-fabric_api_version=0.139.4+1.21.11
-fabric_api_version_range=*
 fabric_loader_version=0.18.2
 fabric_loader_version_range=>=0.16.8
-fabric_loom_version=1.14-SNAPSHOT
+fabric_api_version=0.139.4+1.21.11
+fabric_api_version_range=*
 
 # NeoForge - https://github.com/NeoForgeMDKs/MDK-1.21-ModDevGradle or https://github.com/NeoForgeMDKs/MDK-1.21-NeoGradle
-neo_parchment_minecraft_version=1.21.11
-neo_parchment_mappings_version=2025.12.20
 neo_minecraft_version=1.21.11
 neo_minecraft_version_range=[1.21.11,)
 neo_version=21.11.33-beta
