--- a/imagemod-core/build.gradle
+++ b/imagemod-core/build.gradle
@@ -1,5 +1,5 @@
 plugins {
-    id 'fabric-loom' version "${fabric_loom_version}"
+    id 'fabric-loom' version "${loom_version}"
     id 'maven-publish'
 }
 
@@ -14,10 +14,10 @@ group = "${project.group}.core"
 version = project.version
 
 dependencies {
-    minecraft "com.mojang:minecraft:${project.core_minecraft_version}"
+    minecraft "com.mojang:minecraft:${project.minecraft_version}"
     mappings loom.layered() {
         officialMojangMappings()
-        parchment("org.parchmentmc.data:parchment-1.21:${project.core_parchment_mappings_version}@zip")
+    //    parchment("org.parchmentmc.data:parchment-${project.parchment_minecraft_version}:${project.parchment_mappings_version}@zip")
     }
 }
 
